cleared spaces in css file

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,10 +1,8 @@
 @import "tailwindcss";
 @tailwind utilities;
 @plugin "tailwindcss-animate";
-
- /* @custom-variant dark (&:is(.dark *)); */
-
- @theme inline {
+/* @custom-variant dark (&:is(.dark *)); */
+@theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
@@ -43,11 +41,10 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
-
-   --primary: #FF7251;
-  --secondary: #FF9E63;
-  --tertiary: #FF6F61;
-  --cream: #FFFAF2;
+  --primary: #ff7251;
+  --secondary: #ff9e63;
+  --tertiary: #ff6f61;
+  --cream: #fffaf2;
 }
 /* 
 :root {
@@ -84,11 +81,7 @@
   --sidebar-accent-foreground: #FF7251;
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
-
-
-  
 }  */
-
 /* .dark {
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
@@ -123,7 +116,6 @@
   --sidebar-border: oklch(0.269 0 0);
   --sidebar-ring: oklch(0.439 0 0);
 }  */
-
 @layer base {
   * {
     @apply border-border outline-ring/50;
@@ -132,9 +124,7 @@
     @apply bg-background text-foreground;
   }
 }
-
-@theme{
- 
+@theme {
 }
 /* 
 @layer utilities{
