--- a/frontend/app/page.module.css
+++ b/frontend/app/page.module.css
@@ -1,1 +1,18 @@
-.banner{color: linear-gradient(270deg, #FFD966 0%, #FF9E63 28.29%, #FF6F61 64.5%);}
+.img{
+   
+    object-fit: cover;
+}
+
+.heroContainer{
+    position: relative;
+    width: 100%;
+    height: 312px;
+    top: -90px;
+    bottom: 0;
+}
+.empContainer{
+    position: relative;
+    width: 100%;
+    height: 312px;
+    bottom: 0;
+}
